--- a/pages/prices.html
+++ b/pages/prices.html
@@ -163,7 +163,54 @@
     <!-- END OF HERO-->
     <!--  END OF MENU -->
     <main id="main" data-main>
-        <!-- SKILLS SECTION-->
+        <section class="prices">
+
+            <div class="price-container">
+                <!-- CONTAINER TITLE [H2] -->
+                <h2 class="container-title">Price-list</h2>
+                <!-- GRID CONTAINER -->
+                <div class="grid-container">
+                    
+                    <div class="price-group">
+                        <h3>Website Design</h3>
+                        <ul>
+                            <li>
+                                <h4>Mobile design </h4>
+                                <p>R400</p>
+                            </li>
+                            <li>
+                                <h4>Desktop design</h4>
+                                <p>R800</p>
+                            </li>
+                            <li>
+                                <h4>Responsive Web Design </h4>
+                                <p>R600</p>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="price-group">
+                        <h3>Web Hosting & Domain Management</h3>
+                        <ul>
+                            <li>
+                                <h4>Web Service registration</h4>
+                                <p>R200</p>
+                            </li>
+                            <li>
+                                <h4>Domain Name registration</h4>
+                                <p>R150</p>
+                            </li>
+                            <li>
+                                <h4>Monthly Maintenance </h4>
+                                <p>R150</p>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
 
         <!-- CONTACT SECTION-->
         <section class="link-section" id="contact">
