--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       width: 100%;
       height: .125rem;
       background: linear-gradient(90deg, transparent, hsl(209, 20%, 75%), transparent);
-      animation: underline 1.5s ease forwards 2.75s;
+      animation: underline 2.5s ease forwards 1.25s;
       opacity: 0;
     }
 
@@ -139,9 +139,9 @@
       color: #f4f4f4;
       display: flex;
       justify-content: center;
-      gap: 1rem;
+      /* gap: 1rem; */
       animation: title-h1 1.25s forwards 1.75s;
-      opacity: 0;
+      /* opacity: 0; */
     }
 
     .loader_bg .title h1 span {
@@ -152,11 +152,11 @@
       text-transform: uppercase;
       color: hsl(209, 20%, 75%);
       letter-spacing: .25rem;
-      animation: title-p 1.25s forwards 2.25s;
-      opacity: 0;
+      /* animation: title-p 1.25s forwards 2.25s; */
+      /* opacity: 0; */
     }
 
-    @keyframes title-h1 {
+    /* @keyframes title-h1 {
       0% {
         opacity: 0;
         gap: 1rem;
@@ -166,7 +166,7 @@
         gap: 0;
         opacity: 1;
       }
-    }
+    } */
 
     @keyframes title-p {
       0% {
@@ -225,7 +225,7 @@
       </div>
       <div class="title">
         <h1>Shakex<span>Sempe</span></h1>
-        <p>web developer</p>
+        <p>Web Developer</p>
       </div>
     </div>
   </div>
@@ -844,7 +844,7 @@
   <script>
     setTimeout(function () {
       $('.loader_bg').fadeToggle();
-    }, 5000);
+    }, 3500);
   </script>
 
   </body>
