hero imgs preloads

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
   <script src="js/projects.js" defer></script>
   <script src="js/app.js" defer></script>
 
+  <link rel="preload" href="hero/hero-mobile.webp" as="image/webp" media="(max-width: 500px)">
+  <link rel="preload" href="hero/hero-desktop.webp" as="image/webp" media="(min-width: 500.1px)">
   <link rel="preload" href="img/hero_450.jpg" as="image" media="(max-width: 450px)">
   <link rel="preload" href="img/hero_1900.jpg" as="image" media="(min-width: 450.1px)">
 
