test: grid hero

--- a/index.html
+++ b/index.html
@@ -310,26 +310,28 @@
   <!--HERO-->
   <section id="home" data-hero class="banner index-banner">
 
-    <div class="hero">
+    <div class="hero hero-grid">
 
       <!-- HERO TITLE -->
-      <div class="hero-index-content">
+      <div class="grid-title ">
         <div class="content-title">
           <h1>Front-End Web Developer</h1>
-          <h2>Boitumelo<span> Shakex</span><br>Sempe</h2>
+          <h2>Boitumelo<span> Shakex</span> Sempe</h2>
         </div>
 
-        <div class="content-value">
-          <p>Accessible, Immersive & Engaging <br>
-            <span>responsive web design</span></p>
-            <div class="cta">
-              <a href="#main" id="hero-cta" class="btn">get started<i class="fa-solid fa-angles-right"></i></a>
-            </div>
-        </div>
-
+        
       </div>
+      
+      <div class=" grid-subtitle">
+        <p>Accessible, Immersive & Engaging <br>
+          <span>responsive web design</span></p>
+          <div class="cta">
+            <a href="#main" id="hero-cta" class="btn btn-primary">get started<i class="fa-solid fa-angles-right"></i></a>
+          </div>
+      </div>
+
       <!-- HERO IMAGE  -->
-      <picture class="hero-image">
+      <picture class=" grid-image ">
         <source
           srcset="hero/hero-desktop.webp"
           media="(min-width: 500.1px)"
@@ -344,7 +346,9 @@
         >
         <img src="hero/hero-mobile.jpg" width="450" height="318" alt="Laptop">
       </picture>
+
     </div>
+
   </section>
   
   <!-- MAIN SECTION = SKILLS + WORK + ABOUT + CONTACT + PROJECTS + FOOTER -->
