--- a/pages/work.html
+++ b/pages/work.html
@@ -137,28 +137,45 @@
             <div class="progress-bar index-bar" id="myBar"></div>
         </div>
     </header>
-    <!-- END OF HERO-->
-    <!-- END OF PROGRESS BAR-->
+
     <!--HERO-->
-    <section id="home" data-hero class="banner about-banner">
-        <div class="hero">
-            <div class="hero-index-content">
+    <section id="home" data-hero class="banner index-banner">
+
+        <div class="hero hero-grid">
+
+            <!-- HERO TITLE -->
+            <div class="grid-title ">
+
                 <div class="content-title">
                     <h1>Front-End Web Developer</h1>
-                    <h2>Boitumelo<span> Shakex</span><br>Sempe</h2>
+                    <h2>Boitumelo<span> Shakex</span> Sempe</h2>
                 </div>
-                <div class="content-value">
-                    <p>Accessible, Immersive & Engaging <br>
-                        <span>responsive web design</span></p>
-                    <div class="cta">
-                        <a href="#main" class="btn">view projects<i class="fa-solid fa-angles-right"></i></a>
-                    </div>
-                </div>
+
             </div>
+
+            <div class=" grid-subtitle">
+                <p>Accessible, Immersive & Engaging <br>
+                    <span>responsive web design</span>
+                </p>
+
+                <div class="cta">
+                    <a href="#main" id="hero-cta" class="btn btn-primary">my projects<i
+                            class="fa-solid fa-angles-right"></i></a>
+                </div>
+
+            </div>
+
+            <!-- HERO IMAGE  -->
+            <picture class=" grid-image ">
+                <source srcset="../hero/hero-desktop.webp" media="(min-width: 500.1px)" width="900" height="637">
+                <source srcset="../hero/hero-mobile.webp" media="(max-width: 500px)" width="400" height="283">
+                <img src="../hero/hero-mobile.jpg" width="450" height="318" alt="Laptop">
+            </picture>
+
         </div>
+
     </section>
-    <!-- END OF HERO-->
-    <!--  END OF MENU -->
+
     <main id="main" data-main>
         <!-- WORK / PORTFOLIO -->
         <section class="link-section">
@@ -422,6 +439,7 @@
                 </div>
             </div>
         </section>
+
         <!-- CONTACT SECTION-->
         <section class="link-section" id="contact">
             <div class="contact container">
@@ -478,6 +496,7 @@
             </div>
             <!-- end of padding section -->
         </section>
+
         <!-- FOOTER -->
         <section class="link-section" id="footer">
             <div class="footer ">
@@ -617,8 +636,9 @@
                 </div>
             </div>
         </section>
-        <!-- END OF FOOTER-->
+
     </main>
+
     <!-- BOTTOM NAVIGATION -->
     <div class="bottom-nav" id="bottom-nav">
         <div class="link-item io-item item io-item-2">
