--- a/index.html
+++ b/index.html
@@ -326,7 +326,9 @@
         <p>Accessible, Immersive & Engaging <br>
           <span>responsive web design</span></p>
           <div class="cta">
-            <a href="#main" id="hero-cta" class="btn btn-primary">get started<i class="fa-solid fa-angles-right"></i></a>
+            <a href="#main" id="hero-cta" class="btn btn-primary">get started
+              <img src="icons/solid-dark/icons8-double-right-64-light.png" alt="" class="icon">
+            </a>
           </div>
       </div>
 
