--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
           <span>responsive web design</span></p>
           <div class="cta">
             <a href="#main" id="hero-cta" class="btn btn-primary">get started
-              <img src="icons/solid-dark/icons8-double-right-64-light.png" alt="" class="icon">
+              <img class="icon" src="icons/solid-light/icons8-double-right-64-light.png" height="64" width="64" alt="double right icon" >
             </a>
           </div>
       </div>
