--- a/index.html
+++ b/index.html
@@ -251,41 +251,49 @@
           <div class="hamburger">
             <div class="bar"></div>
           </div>
-
+          <!-- ASIDE NAV STYLE -->
           <div class="links-container" data-linksContainer>
+            
+            <!-- ASIDE PAGE LINKS -->
             <ul class="links">
+
               <!-- HOME LINK -->
               <li>
-                <i class="fas fa-house"></i>
-                <a href="#" title="web development skills" data-after="Home"
+                <img class="icon" src="icons/outline/icons8-home-page-32.png" height="32" width="32" alt="home page icon">
+                <a href="#" title="Home Page" data-after="Home"
                   class="scroll-link scroll-li">home</a>
               </li>
+
               <!-- SKILLS LINK -->
               <li>
-                <i class="fas fa-code"></i>
-                <a href="pages/skills.html" title="web development skills" data-link data-after="skills"
+                <img class="icon" src="icons/solid-light/icons8-code-48.png" height="48" width="48" alt="code icon">
+                <a href="pages/skills.html" title="Skills Page" data-link data-after="skills"
                   class="scroll-link scroll-li">skills</a>
               </li>
+
               <!-- ABOUT LINK -->
               <li>
-                <i class="fas fa-user"></i>
+                <img class="icon" src="icons/outline/icons8-user-24.png" height="30" width="30" alt="user icon">
                 <a href="pages/about.html" title="about Boitumelo Sempe" data-link data-after="About"
                   class="scroll-link scroll-li">about</a>
               </li>
+
               <!-- WORK[PROJECTS] LINK -->
               <li>
-                <i class="fa-solid fa-laptop-code"></i>
+                <img class="icon" src="icons/solid-light/icons8-link-48.png" height="48" width="48" alt="link icon">
                 <a href="pages/work.html" title="github repositories" data-link data-after="Projects"
                   class="scroll-link scroll-li">projects</a>
               </li>
               
               <!-- CONTACT LINK -->
               <li>
-                <i class="fas fa-address-book"></i>
+                <img class="icon" src="icons/outline/icons8-info-squared-50-light.png" height="48" width="48" alt="info-square icon">
                 <a href="#contact" title="contact-info" data-link data-after="Contact" class="scroll-link">contact</a>
               </li>
 
             </ul>
+
+            <!-- ASIDE CONTACT LINKS -->
             <div class="contact-links">
               <a title="Email Address" href="mailto:bshakex@gmail.com"><i
                   class="fa-solid fa-envelope"></i>bshakex@gmail.com</a>
@@ -295,6 +303,7 @@
               <a title="Location" href="https://goo.gl/maps/iSkbB2vbPQ3n3mhK9" target="_blank"><i
                   class="fa-solid fa-location-dot"></i>Mahikeng, South Africa</a>
             </div>
+
           </div>
 
         </div>
