--- a/index.html
+++ b/index.html
@@ -295,13 +295,23 @@
 
             <!-- ASIDE CONTACT LINKS -->
             <div class="contact-links">
-              <a title="Email Address" href="mailto:bshakex@gmail.com"><i
-                  class="fa-solid fa-envelope"></i>bshakex@gmail.com</a>
-              <a title="Whatsapp number" href="https://wa.me/+27716876941" target="_blank"><i
-                  class="fa-brands fa-whatsapp"></i>0716876941 (Whatsapp)</a>
-              <a title="Phone number" href="tel:0726005104"><i class="fa-solid fa-phone"></i>0726005104</a>
-              <a title="Location" href="https://goo.gl/maps/iSkbB2vbPQ3n3mhK9" target="_blank"><i
-                  class="fa-solid fa-location-dot"></i>Mahikeng, South Africa</a>
+
+              <a title="Email Address" href="mailto:bshakex@gmail.com">
+                <img class="icon" src="icons/solid-light/icons8-envelope-32.png" height="32" width="32" alt="envelope icon"><span></span>
+                  bshakex@gmail.com</a>
+
+              <a title="Whatsapp number" href="https://wa.me/+27716876941" target="_blank">
+                <img class="icon" src="icons/solid-light/icons8-whatsapp-50.png" height="50" width="50" alt="Whatsapp icon"><span></span>
+                  0716876941 (Whatsapp)</a>
+
+              <a title="Phone number" href="tel:0726005104">
+                <img class="icon" src="icons/solid-light/icons8-phone-50.png" height="50" width="50" alt="phone icon"><span></span>
+                  0726005104</a>
+              
+              <a title="Location" href="https://goo.gl/maps/iSkbB2vbPQ3n3mhK9" target="_blank">
+                <img class="icon" src="icons/solid-light/icons8-location-pin-50.png" height="50" width="50" alt="location pin icon"><span></span>
+                Mahikeng, South Africa</a>
+            
             </div>
 
           </div>
