--- a/index.html
+++ b/index.html
@@ -259,35 +259,35 @@
 
               <!-- HOME LINK -->
               <li>
-                <img class="icon" src="icons/outline/icons8-home-page-32.png" height="32" width="32" alt="home page icon">
+                <img class="icon" src="icons/outline/icons8-homepage-24-light.png" height="24" width="24" alt="home page icon">
                 <a href="#" title="Home Page" data-after="Home"
                   class="scroll-link scroll-li">home</a>
               </li>
 
               <!-- SKILLS LINK -->
               <li>
-                <img class="icon" src="icons/solid-light/icons8-code-48.png" height="48" width="48" alt="code icon">
+                <img class="icon" src="icons/solid/icons8-code-24-light.png" height="24" width="24" alt="code icon">
                 <a href="pages/skills.html" title="Skills Page" data-link data-after="skills"
                   class="scroll-link scroll-li">skills</a>
               </li>
 
               <!-- ABOUT LINK -->
               <li>
-                <img class="icon" src="icons/outline/icons8-user-24.png" height="30" width="30" alt="user icon">
-                <a href="pages/about.html" title="about Boitumelo Sempe" data-link data-after="About"
+                <img class="icon" src="icons/outline/icons8-user-24-light.png" height="24" width="24" alt="user icon">
+                <a href="pages/about.html" title="About page" data-link data-after="About"
                   class="scroll-link scroll-li">about</a>
               </li>
 
               <!-- WORK[PROJECTS] LINK -->
               <li>
-                <img class="icon" src="icons/solid-light/icons8-link-48.png" height="48" width="48" alt="link icon">
-                <a href="pages/work.html" title="github repositories" data-link data-after="Projects"
+                <img class="icon" src="icons/outline/icons8-link-24-light.png" height="24" width="24" alt="link icon">
+                <a href="pages/work.html" title="Projects page" data-link data-after="Projects"
                   class="scroll-link scroll-li">projects</a>
               </li>
               
               <!-- CONTACT LINK -->
               <li>
-                <img class="icon" src="icons/outline/icons8-info-squared-50-light.png" height="48" width="48" alt="info-square icon">
+                <img class="icon" src="icons/outline/icons8-info-24-light.png" height="24" width="24" alt="info-square icon">
                 <a href="#contact" title="contact-info" data-link data-after="Contact" class="scroll-link">contact</a>
               </li>
 
@@ -297,7 +297,7 @@
             <div class="contact-links">
 
               <a title="Email Address" href="mailto:bshakex@gmail.com">
-                <img class="icon" src="icons/solid-light/icons8-envelope-32.png" height="32" width="32" alt="envelope icon"><span></span>
+                <img class="icon" src="icons/solid/icons8-envelope-48-light.png" height="32" width="32" alt="envelope icon"><span></span>
                   bshakex@gmail.com</a>
 
               <a title="Whatsapp number" href="https://wa.me/+27716876941" target="_blank">
