bigger aside outlined icons

--- a/index.html
+++ b/index.html
@@ -259,12 +259,12 @@
           <!-- ASIDE NAV STYLE -->
           <div class="links-container" data-linksContainer>
             
-            <!-- ASIDE PAGE LINKS -->
+            <!-- NAV PAGE LINKS -->
             <ul class="links">
 
               <!-- HOME LINK -->
               <li>
-                <img class="icon" src="icons/outline/icons8-homepage-24-light.png" height="24" width="24" alt="home page icon">
+                <img class="icon" src="icons/outline/icons8-homepage-48-light.png" height="48" width="48" alt="home page icon">
                 <a href="#" title="Home Page" data-after="Home"
                   class="scroll-link scroll-li">home</a>
               </li>
@@ -278,27 +278,27 @@
 
               <!-- ABOUT LINK -->
               <li>
-                <img class="icon" src="icons/outline/icons8-user-24-light.png" height="24" width="24" alt="user icon">
+                <img class="icon" src="icons/outline/icons8-user-48-light.png" height="48" width="48" alt="user icon">
                 <a href="pages/about.html" title="About page" data-link data-after="About"
                   class="scroll-link scroll-li">about</a>
               </li>
 
               <!-- WORK[PROJECTS] LINK -->
               <li>
-                <img class="icon" src="icons/outline/icons8-link-24-light.png" height="24" width="24" alt="link icon">
+                <img class="icon" src="icons/outline/icons8-link-48-light.png" height="48" width="48" alt="link icon">
                 <a href="pages/work.html" title="Projects page" data-link data-after="Projects"
                   class="scroll-link scroll-li">projects</a>
               </li>
               
               <!-- CONTACT LINK -->
               <li>
-                <img class="icon" src="icons/outline/icons8-info-24-light.png" height="24" width="24" alt="info-square icon">
+                <img class="icon" src="icons/outline/icons8-info-squared-48-light.png" height="48" width="48" alt="info-square icon">
                 <a href="#contact" title="contact-info" data-link data-after="Contact" class="scroll-link">contact</a>
               </li>
 
             </ul>
 
-            <!-- ASIDE CONTACT LINKS -->
+            <!-- NAV CONTACT LINKS -->
             <div class="contact-links">
 
               <a title="Email Address" href="mailto:bshakex@gmail.com">
