skills-section-title-images

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -256,6 +256,7 @@
           </div>
 
           <div class="skill-section-container">
+
             <div id="section-1" class="skill-section page-skill-section section-1">
               <div class="skill-section-title section-title-1">
                 <h3>web accessibility & <br> responsive web design</h3>
@@ -266,7 +267,7 @@
                   <li>Javascript</li>
                 </ul> -->
                 <!-- <img src="../img/trevor-cole-zMEzuZlmIQY-unsplash.jpg" loading="lazy" alt="Keyboard"> -->
-                <img src="../img/keyboard.jpg" loading="lazy" alt="Keyboard">
+                <img class="section-title-image" src="../img/keyboard.jpg" loading="lazy" alt="Keyboard">
               </div>
               <div class="skill-section-content">
 
@@ -316,7 +317,7 @@
               <div class="skill-section-title section-title-2">
                 <h3>immersive Interface &<br>Engaging Experience</h3>
                 <p>appealing user interface & <br>interactive user experience</p>
-                <img src="../img/laptop-2.jpg" loading="lazy" alt="Keyboard">
+                <img class="section-title-image" src="../img/laptop-2.jpg" loading="lazy" alt="Keyboard">
               </div>
               <div class="skill-section-content">
 
@@ -366,7 +367,7 @@
                   <li>Node-JS</li>
                   <li>Visual Studio Code</li>
                 </ul> -->
-                <img src="../img/keyboard-mouse.jpg" loading="lazy" alt="Keyboard">
+                <img class="section-title-image" src="../img/keyboard-mouse.jpg" loading="lazy" alt="Keyboard">
               </div>
               <div class="skill-section-content">
 
@@ -444,7 +445,7 @@
                   <li>Customer Care</li>
                   <li>Creativity</li>
                 </ul> -->
-                <img src="../img/laptop-coffee.jpg" loading="lazy" alt="Keyboard">
+                <img class="section-title-image" src="../img/laptop-coffee.jpg" loading="lazy" alt="Keyboard">
               </div>
               <div class="skill-section-content">
 
