--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
       
       <div class="skill-section section-1">
         <div class="skill-section-title section-title-1">
-          <img src="img/keyboard.jpg" loading="lazy" alt="Keyboard">
+          <img class="section-title-image" src="img/keyboard.jpg" loading="lazy" alt="Keyboard">
           <h3>web accessibility & <br> responsive web design</h3>
           <p>User friendly websites <br> that adapt to all devices.</p>
           <!-- <ul>
@@ -424,7 +424,9 @@
             <li>CSS-3</li>
             <li>Javascript</li>
           </ul> -->
-          <a href="pages/skills.html#section-1" class="btn btn-light">view skills<i class="fas fa-angles-right"></i></a>
+          <a href="pages/skills.html#section-1" class="btn btn-light">view skills
+            <img src="icons/solid/icons8-double-right-48-dark.png" height="48" width="48" alt="double right icon" class="icon">
+          </a>
         </div>
       </div>
 
@@ -435,9 +437,11 @@
   <!-- WORK / PORTFOLIO -->
   <section id="work" class="link-section">
     <div class="work">
+
       <div class="work-header">
         <h2 data-text="projects" class="section-title io-item io-item">pro<span>j</span>ects</h2>
       </div>
+
       <div class="work-container">
 
         <!-- ORICH -->
@@ -535,13 +539,14 @@
           </div>
         </div>
       </div>
+
     </div>
     <!-- SKILLS MENU CONTAINER -->
     <div class="skill-section-container">
       <div class="skill-section section-2">
 
         <div class="skill-section-title section-title-2">
-          <img src="img/laptop-2.jpg" loading="lazy" alt="Keyboard">
+          <img class="section-title-image" src="img/laptop-2.jpg" loading="lazy" alt="Keyboard">
           <h3>immersive Interface &<br>Engaging Experience</h3>
           <p>appealing user interface & <br>interactive user experience</p>
           <a href="pages/work.html" class="btn btn-light">view projects<i class="fas fa-angles-right"></i></a>
@@ -650,7 +655,7 @@
     <div class="skill-section section-4 light-section">
 
       <div class="skill-section-title section-title-4">
-        <img src="img/laptop-coffee.jpg" loading="lazy" alt="Keyboard">
+        <img class="section-title-image" src="img/laptop-coffee.jpg" loading="lazy" alt="Keyboard">
         <h3>Interpersonal & <br> Soft Skills</h3>
         <p>Communication, creativity, <br> interaction & team work.</p>
         <a href="pages/about.html" class="btn btn-dark">about me<i class="fas fa-angles-right"></i></a>
@@ -735,7 +740,7 @@
 
       <div class="skill-section-title section-title-3">
         <h3>Version Control &<br>development tools</h3>
-        <img src="img/keyboard-mouse.jpg" loading="lazy" alt="Keyboard & Mouse">
+        <img class="section-title-image" src="img/keyboard-mouse.jpg" loading="lazy" alt="Keyboard & Mouse">
         <p>Tools used to create & <br> manage software code.</p>
         
         <a href="pages/skills.html#section-3" class="btn btn-dark">view skills<i class="fas fa-angles-right"></i></a>
