--- a/index.html
+++ b/index.html
@@ -549,7 +549,9 @@
           <img class="section-title-image" src="img/laptop-2.jpg" loading="lazy" alt="Keyboard">
           <h3>immersive Interface &<br>Engaging Experience</h3>
           <p>appealing user interface & <br>interactive user experience</p>
-          <a href="pages/work.html" class="btn btn-light">view projects<i class="fas fa-angles-right"></i></a>
+          <a href="pages/work.html" class="btn btn-light">view projects
+            <img src="icons/solid/icons8-double-right-48-dark.png" height="48" width="48" alt="double-right icon" class="icon">
+          </a>
         </div>
 
       </div>
@@ -658,7 +660,9 @@
         <img class="section-title-image" src="img/laptop-coffee.jpg" loading="lazy" alt="Keyboard">
         <h3>Interpersonal & <br> Soft Skills</h3>
         <p>Communication, creativity, <br> interaction & team work.</p>
-        <a href="pages/about.html" class="btn btn-dark">about me<i class="fas fa-angles-right"></i></a>
+        <a href="pages/about.html" class="btn btn-dark">about me
+          <img src="icons/solid/icons8-double-right-48-light.png" height="48" width="48" alt="double-right icon" class="icon">
+        </a>
       </div>
 
     </div>
@@ -743,7 +747,9 @@
         <img class="section-title-image" src="img/keyboard-mouse.jpg" loading="lazy" alt="Keyboard & Mouse">
         <p>Tools used to create & <br> manage software code.</p>
         
-        <a href="pages/skills.html#section-3" class="btn btn-dark">view skills<i class="fas fa-angles-right"></i></a>
+        <a href="pages/skills.html#section-3" class="btn btn-dark">view skills
+          <img src="icons/solid/icons8-double-right-48-light.png" height="48" width="48" alt="double right icon" class="icon">
+        </a>
       </div>
 
     </div>
