--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                 </a>
 
                 <a href="https://orichtrading.co.za/" class="cta-primary" target="_blank">visit page
-                  <img src="icons/outline/icons8-right-button-48-light.png" height="24" width="24" alt="code icon" class="icon">
+                  <img src="icons/outline/icons8-right-button-48-light.png" height="48" width="48" alt="right button icon" class="icon">
                 </a>
               </div>
             </div>
@@ -508,7 +508,7 @@
                 </a>
 
                 <a href="https://munch-up.netlify.app/" class="cta-primary" target="_blank">visit page
-                  <img src="icons/outline/icons8-right-button-48-light.png" height="24" width="24" alt="code icon" class="icon">
+                  <img src="icons/outline/icons8-right-button-48-light.png" height="48" width="48" alt="right button icon" class="icon">
                 </a>
 
               </div>
@@ -542,7 +542,7 @@
                 </a>
 
                 <a href="https://shakexsempe.github.io/hlavutelo/" class="cta-primary" target="_blank">visit page
-                  <img src="icons/outline/icons8-right-button-48-light.png" height="24" width="24" alt="code icon" class="icon">
+                  <img src="icons/outline/icons8-right-button-48-light.png" height="48" width="48" alt="right button icon" class="icon">
                 </a>
               </div>
               <div class="item-meta-data">
@@ -602,8 +602,6 @@
               </p>
             </div>
 
-           
-
             <!-- ARTICLE BODY = CONTAINER FOR BODY ITEMS -->
             <div class="article-body">
 
@@ -614,31 +612,36 @@
                 <p>Certificate in Responsive Web Design.</p>
                 <a class="body-item-link" title="Responsive Web Design certificate"
                   href="https://www.freecodecamp.org/certification/boitumelo-sempe/responsive-web-design"
-                  target="_blank"><i class="fas fa-arrow-up-right-from-square"></i>freecodecamp.org/certification/</a>
+                  target="_blank">
+                  <img src="icons/outline/icons8-link-48-dark.png" height="48" width="48" alt="link icon" class="icon">
+                  freecodecamp.org/certification/</a>
               </div>
 
               <div class="body-item">
                 <i class="fa-solid fa-user-graduate"></i>
                 <h3 class="body-item-title">University of Pretoria</h3>
                 <p>BPolSci International Relations.</p>
-                <a href="https://www.up.ac.za/" target="_blank"><i
-                    class="fas fa-arrow-up-right-from-square"></i>www.up.ac.za/</a>
+                <a href="https://www.up.ac.za/" target="_blank">
+                  <img src="icons/outline/icons8-link-48-dark.png" height="48" width="48" alt="link icon" class="icon">
+                  www.up.ac.za/</a>
               </div>
 
               <div class="body-item">
                 <i class="fa-solid fa-graduation-cap"></i>
                 <h3 class="body-item-title">International School of South Africa</h3>
                 <p>Cambridge International Advanced Subsidiary & Advanced level.</p>
-                <a href="https://www.issa.co.za/" target="_blank"><i
-                    class="fas fa-arrow-up-right-from-square"></i>www.issa.co.za</a>
+                <a href="https://www.issa.co.za/" target="_blank">
+                  <img src="icons/outline/icons8-link-48-dark.png" height="48" width="48" alt="link icon" class="icon">
+                  www.issa.co.za</a>
               </div>
 
               <div class="body-item">
                 <i class="fa-solid fa-headset"></i>
                 <h3 class="body-item-title">Compensation Fund - Dept of Labour</h3>
                 <p>Customer Care Agent.</p>
-                <a href="https://www.labour.gov.za/Contacts/Pages/Contacts-CF.aspx" target="_blank"><i
-                    class="fas fa-arrow-up-right-from-square"></i>www.labour.gov.za</a>
+                <a href="https://www.labour.gov.za/Contacts/Pages/Contacts-CF.aspx" target="_blank">
+                  <img src="icons/outline/icons8-link-48-dark.png" height="48" width="48" alt="link icon" class="icon">
+                  www.labour.gov.za</a>
               </div>
 
             </div>
@@ -649,11 +652,11 @@
           <div class="buttons-container">
 
             <a href="mailto:bshakex@gmail.com?subject=CV Request" class="btn btn-secondary">Request CV
-              <img src="icons/solid/icons8-envelope-48-brand.png" alt="" class="icon">
+              <img src="icons/solid/icons8-envelope-48-brand.png" height="48" width="48" alt="envelope icon" class="icon">
             </a>
 
             <a href="pages/about.html" class="btn btn-primary">About Page
-              <img src="icons/outline/icons8-right-button-48-light.png" alt="" class="icon">
+              <img src="icons/outline/icons8-right-button-48-light.png" height="48" width="48" alt="right button" class="icon">
               </a>
 
           </div>
