--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
   <!-- FOOTER -->
   <section class="link-section" id="footer">
     <div class="footer ">
-      <!-- TOP FOOTER -->
+      <!-- TOP FOOTER = SOCIAL MEDIA + CONTACT FORM -->
       <div class="footer-top">
         <!-- SOCIAL MEDIA LINKS -->
         <div class="socialMedia-links">
@@ -860,8 +860,8 @@
           </div>
 
         </div>
-        <!-- end of social media links -->
-        <!-- contact form -->
+
+        <!-- CONTACT FORM -->
         <form class="contact-form" target="_blank" action="https://formsubmit.co/bshakex@gmail.com" method="POST">
           <h2 class="footer-section-title">Get In Touch</h2>
 
@@ -881,7 +881,10 @@
               required></textarea>
           </div>
 
-          <button type="submit" title="submit contact form">submit form<i class="fa-regular fa-envelope-open"></i></button>
+          <button type="submit" title="submit contact form">
+            submit form
+            <img src="icons/solid/icons8-email-send-48-light.png" height="48" width="48" alt="email sent icon" class="icon">
+          </button>
           <!-- form options -->
           <input type="hidden" name="_subject" value="New submission!">
           <input type="hidden" name="_autoresponse" value="Shakex has received your form">
