--- a/index.html
+++ b/index.html
@@ -799,6 +799,7 @@
   <!-- FOOTER -->
   <section class="link-section" id="footer">
     <div class="footer ">
+      
       <!-- TOP FOOTER = SOCIAL MEDIA + CONTACT FORM -->
       <div class="footer-top">
         <!-- SOCIAL MEDIA LINKS -->
@@ -894,36 +895,59 @@
 
         </form>
       </div>
-      <!-- BOTTOM FOOTER -->
+
+      <!-- BOTTOM FOOTER = COPYRIGHT + CTAS -->
       <div id="footer-bottom" class="footer-bottom">
+        
         <a href="pages/design.html">
-          <img src="img/shakex-html-logo.png" loading="lazy" alt="Shakex Sempe Web Developer logo">
+          <img class="footer-logo" src="img/shakex-html-logo.png" width="400" height="227" loading="lazy" alt="Shakex Sempe: Web Developer logo">
         </a>
+
         <div class="footer-item">
           <h3>all rights reserved</h3>
           <p>copyright&copy; Boitumelo Sempe</p>
           <p>web design & development</p>
           <span class="date"></span>
         </div>
+
         <div class="footer-item">
           <h3>browse website</h3>
           <ul class="footer-list browse-list">
-            <li><a href="#">home</a></li>
-            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="pages/about.html">about</a></li>
-            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="pages/skills.html">skills</a></li>
-            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="pages/work.html">projects</a></li>
+            <li>
+              <img src="icons/outline/icons8-homepage-48-light.png" height="48" width="48" alt="homepage icon" class="icon">
+              <a href="#">home</a></li>
+            <li>
+              <img src="icons/outline/icons8-link-48-light.png" height="48" width="48" alt="link icon" class="icon">
+              <a href="pages/about.html">about</a></li>
+            <li>
+              <img src="icons/outline/icons8-link-48-light.png" height="48" width="48" alt="link icon" class="icon">
+              <a href="pages/skills.html">skills</a></li>
+            <li>
+              <img src="icons/outline/icons8-link-48-light.png" height="48" width="48" alt="link icon" class="icon">
+              <a href="pages/work.html">projects</a></li>
           </ul>
         </div>
+
         <div class="footer-item">
           <h3>contact details</h3>
           <ul class="footer-list contact-list">
-            <li><i class="fas fa-envelope"></i><a href="mailto:bshakex@gmail.com">bshakex@gmail.com</a></li>
-            <li><i class="fas fa-phone"></i><a href="tel:0726005104">072 600 5104</a></li>
-            <li><i class="fab fa-whatsapp"></i><a href="https://wa.me/+27716876941">071 687 6941</a></li>
-            <li><i class="fa-solid fa-location-dot"></i><a>Mahikeng, South Africa</a></li>
+            <li>
+              <img src="icons/solid/icons8-envelope-24-light.png" width="48" height="48" alt=" icon" class="icon">
+              <a href="mailto:bshakex@gmail.com">bshakex@gmail.com</a></li>
+            <li>
+              <img src="icons/solid/icons8-outgoing-call-48-light.png" width="48" height="48" alt=" icon" class="icon">
+              <a href="tel:0726005104">072 600 5104</a></li>
+            <li>
+              <img src="icons/solid/icons8-whatsapp-48-light.png" width="48" height="48" alt=" icon" class="icon">
+              <a href="https://wa.me/+27716876941">071 687 6941</a></li>
+            <li>
+              <img src="icons/solid/icons8-location-48-light.png" width="48" height="48" alt=" icon" class="icon">
+              <a>Mahikeng, South Africa</a></li>
           </ul>
         </div>
+
       </div>
+
     </div>
   </section>
 
