--- a/index.html
+++ b/index.html
@@ -735,8 +735,10 @@
           
           <div id="whatsapp" class="contact-info">
             <p>+27716876941</p>
-            <a href="https://wa.me/+27716876941" class="btn btn-primary" target="_blank" title="WhatsApp">send text<i
-                class="fa-solid fa-comment-dots"></i></a>
+            <a href="https://wa.me/+27716876941" class="btn btn-primary" target="_blank" title="WhatsApp">
+              send text
+              <img src="icons//solid/icons8-sms-48-light.png" height="48" width="48" alt="Whatsapp icon" class="icon">
+              </a>
           </div>
 
         </article>
