skills .btn width

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
           <h3>web accessibility & <br> responsive web design</h3>
           <p>User friendly websites <br> that adapt to all devices.</p>
           
-          <a href="pages/skills.html#section-1" class="btn btn-light">view skills
+          <a href="pages/skills.html#section-1" class="btn btn-light">skills page
             <img src="icons/outline/icons8-link-48-dark.png" height="48" width="48" alt="double right icon" class="icon">
           </a>
         </div>
@@ -589,7 +589,7 @@
           <img class="section-title-image" src="img/laptop-2.jpg" loading="lazy" alt="Keyboard">
           <h3>immersive Interface &<br>Engaging Experience</h3>
           <p>appealing user interface & <br>interactive user experience</p>
-          <a href="pages/work.html" class="btn btn-light">view projects
+          <a href="pages/work.html" class="btn btn-light">projects page
             <img src="icons/outline/icons8-link-48-dark.png" height="48" width="48" alt="double-right icon" class="icon">
           </a>
         </div>
