skills page .links container

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             <div class="bar"></div>
           </div>
 
-          <!-- ASIDE NAV STYLE -->
+          <!-- NAV STYLE -->
           <div class="links-container" data-linksContainer>
             
             <!-- NAV PAGE LINKS -->
