--- a/pages/about.html
+++ b/pages/about.html
@@ -56,68 +56,135 @@
     <header id="header" data-header class="header">
         <!-- SKIP TO MAIN LINK -->
         <a class="skip-link" href="#main">skip to main content</a>
+
+        <!-- NAVBAR -->
+        <div class="navbar">
             <nav id="nav">
+
+                <!-- LOGO -->
                 <div class="logo">
                     <a href="#home" title="Shakex Sempe" class="scroll-link">
                         <p>shakex<span>Sempe</span></p>
                     </a>
                 </div>
+
+                <!-- NAV-LIST = TOGGLE + LINKS CONTAINER-->
                 <div class="nav-list">
+
                     <div class="hamburger">
                         <div class="bar"></div>
                     </div>
+
+                    <!-- NAV STYLE -->
                     <div class="links-container" data-linksContainer>
+
+                        <!-- NAV PAGE LINKS -->
                         <ul class="links">
+
                             <!-- HOME LINK -->
                             <li>
-                                <i class="fas fa-house"></i>
-                                <a href="../index.html" title="web development skills" data-after="Home"
-                                    class="scroll-link scroll-li">home</a>
+
+                                <a href="../index.html" title="Home Page" data-after="Home"
+                                    class="scroll-link scroll-li">
+                                    <img class="icon" src="../icons/outline/icons8-homepage-48-light.png" height="48"
+                                        width="48" alt="home page icon">
+                                    home
+                                </a>
+
                             </li>
+
                             <!-- SKILLS LINK -->
                             <li>
-                                <i class="fas fa-code"></i>
-                                <a href="skills.html" title="web development skills" data-link data-after="skills"
-                                    class="scroll-link scroll-li">skills</a>
+
+                                <a href="skills.html" title="Skills Page" data-link data-after="skills"
+                                    class="scroll-link scroll-li">
+                                    <img class="icon" src="../icons/solid/icons8-code-24-light.png" height="24"
+                                        width="24" alt="code icon">
+                                    skills
+                                </a>
+
                             </li>
+
                             <!-- ABOUT LINK -->
                             <li>
-                                <i class="fas fa-user"></i>
-                                <a href="#" title="about Boitumelo Sempe" data-link data-after="About"
-                                    class="scroll-link scroll-li">about</a>
+
+                                <a href="../pages/about.html" title="About page" data-link data-after="About"
+                                    class="scroll-link scroll-li">
+                                    <img class="icon" src="../icons/outline/icons8-user-48-light.png" height="48"
+                                        width="48" alt="user icon">
+                                    about
+                                </a>
+
                             </li>
+
                             <!-- WORK[PROJECTS] LINK -->
                             <li>
-                                <i class="fa-solid fa-earth-africa"></i>
-                                <a href="work.html" title="github repositories" data-link data-after="Projects"
-                                    class="scroll-link scroll-li">projects</a>
+
+                                <a href="../pages/work.html" title="Projects page" data-link data-after="Projects"
+                                    class="scroll-link scroll-li">
+                                    <img class="icon" src="../icons/outline/icons8-link-48-light.png" height="48"
+                                        width="48" alt="link icon">
+                                    projects
+                                </a>
+
                             </li>
 
                             <!-- CONTACT LINK -->
                             <li>
-                                <i class="fas fa-address-book"></i>
+
                                 <a href="#contact" title="contact-info" data-link data-after="Contact"
-                                    class="scroll-link">contact</a>
+                                    class="scroll-link">
+                                    <img class="icon" src="../icons/outline/icons8-info-squared-48-light.png"
+                                        height="48" width="48" alt="info-square icon">
+                                    contact
+                                </a>
+
                             </li>
 
                         </ul>
+
+                        <!-- NAV CONTACT LINKS -->
                         <div class="contact-links">
-                            <a title="Email Address" href="mailto:bshakex@gmail.com"><i
-                                    class="fa-solid fa-envelope"></i>bshakex@gmail.com</a>
-                            <a title="Whatsapp number" href="https://wa.me/+27716876941" target="_blank"><i
-                                    class="fa-brands fa-whatsapp"></i>0716876941 (Whatsapp)</a>
-                            <a title="Phone number" href="tel:0726005104"><i
-                                    class="fa-solid fa-phone"></i>0726005104</a>
-                            <a title="Location" href="https://goo.gl/maps/iSkbB2vbPQ3n3mhK9" target="_blank"><i
-                                    class="fa-solid fa-location-dot"></i>Mahikeng, South Africa</a>
+
+                            <a title="Email Address" href="mailto:bshakex@gmail.com">
+                                <img class="icon" src="../icons/solid/icons8-envelope-48-light.png" height="48"
+                                    width="48" alt="envelope icon">
+                                <span style="--span:1;"></span>
+                                bshakex@gmail.com</a>
+
+                            <a title="Whatsapp number" href="https://wa.me/+27716876941" target="_blank">
+                                <img class="icon" src="../icons/solid/icons8-whatsapp-48-light.png" height="48"
+                                    width="48" alt="Whatsapp icon">
+                                <span style="--span:2;"></span>
+                                0716876941 (Whatsapp)</a>
+
+                            <a title="Phone number" href="tel:0726005104">
+                                <img class="icon" src="../icons/solid/icons8-outgoing-call-48-light.png" height="48"
+                                    width="48" alt="phone icon">
+                                <span style="--span:3;"></span>
+                                0726005104</a>
+
+                            <a title="Location" href="https://goo.gl/maps/iSkbB2vbPQ3n3mhK9" target="_blank">
+                                <img class="icon" src="../icons/solid/icons8-location-48-light.png" height="48"
+                                    width="48" alt="location pin icon">
+                                <span style="--span:4;"></span>
+                                Mahikeng, South Africa</a>
+
                         </div>
+
                     </div>
+
                 </div>
+
             </nav>
+        </div>
+
         <!-- PROGRESS BAR-->
         <div class="progress-container">
-            <div class="progress-bar index-bar" id="myBar"></div>
+            <div class="progress-bar" id="myBar"></div>
         </div>
+        <!-- END OF PROGRESS BAR-->
+
     </header>
 
     <!--HERO-->
