--- a/pages/skills.html
+++ b/pages/skills.html
@@ -54,14 +54,21 @@
   <header id="header" data-header class="header">
     <!-- SKIP TO MAIN LINK -->
     <a class="skip-link" href="#main">skip to main content</a>
+    
+    <!-- NAVBAR -->
     <div class="navbar">
       <nav id="nav">
+
+        <!-- LOGO -->
         <div class="logo">
           <a href="#home" title="Shakex Sempe" class="scroll-link">
             <p>shakex<span>Sempe</span></p>
           </a>
         </div>
+
+        <!-- NAV-LIST = TOGGLE + LINKS CONTAINER-->
         <div class="nav-list">
+          
           <div class="hamburger">
             <div class="bar"></div>
           </div>
@@ -156,15 +163,18 @@
           </div>
 
         </div>
+
       </nav>
     </div>
+
     <!-- PROGRESS BAR-->
     <div class="progress-container">
       <div class="progress-bar" id="myBar"></div>
     </div>
     <!-- END OF PROGRESS BAR-->
+
   </header>
-  <!-- END OF HERO-->
+
   <!--HERO-->
   <section id="home" data-hero class="banner index-banner">
 
@@ -210,7 +220,6 @@
 
   </section>
 
-  <!--  END OF MENU -->
   <main id="main" data-main>
     <!-- SKILLS SECTION-->
     <section class="skills-section skills-section-page link-section" id="skills">
@@ -510,7 +519,6 @@
       </div>
 
     </section>
-    <!--END OF SKILLS SECTION-->
 
     <!-- CONTACT SECTION-->
     <section class="link-section" id="contact">
@@ -698,8 +706,9 @@
         </div>
       </div>
     </section>
-    <!-- END OF FOOTER-->
+
   </main>
+  
   <!-- BOTTOM NAVIGATION -->
   <div class="bottom-nav" id="bottom-nav">
     <div class="link-item io-item item io-item-2">
