projects page meta tags

--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
         
       </div>
       
+      <!-- HERO SUBTITLE -->
       <div class=" grid-subtitle">
         <p>Accessible, Immersive & Engaging <br>
           <span>responsive web design</span></p>
