--- a/pages/work.html
+++ b/pages/work.html
@@ -7,17 +7,16 @@
     <!-- META VIEWPORT -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- META THEME COLOR -->
-    <!-- <meta name="theme-color" content="#20262e" /> -->
     <meta name="theme-color" content="#15191e" />
     <!-- META OG IMAGE -->
     <meta name="image" property="og:image" content="https://shakexsempe.netlify.app/img/shakex-sempe-logo.png">
 
     <!-- TITLE -->
-    <title>Web Developer - Design & Front-End Development || Work Page</title>
-    <!--  -->
+    <title>Projects: Web Design & Development || Freelance Work & Personal Projects</title>
     <!-- META DESCRIPTION -->
     <meta name="description"
-        content="South Africa based Website Developer. I create Homepages, Landing pages and basic websites for businesses & professionals to showcase their services, projects and products.">
+        content="Freelance work & personal projects page.  
+        Web design and development. ">
     <!-- META KEYWORDS -->
     <meta name="keywords"
         content="responsive web design, user interface, UI, user experience, UX, homepage, landing page, website design, website development, seo, freelance,  web hosting, domain registration, ">
@@ -202,16 +201,16 @@
 
             </div>
 
+            <!-- HERO SUBTITLE -->
             <div class=" grid-subtitle">
                 <p>Accessible, Immersive & Engaging <br>
-                    <span>responsive web design</span>
-                </p>
-
+                    <span>responsive web design</span></p>
                 <div class="cta">
-                    <a href="#main" id="hero-cta" class="btn btn-primary">my projects<i
-                            class="fa-solid fa-angles-right"></i></a>
+                    <a href="#main" id="hero-cta" class="btn btn-primary">My Projects
+                        <img class="icon" src="../icons/solid/icons8-double-right-48-light.png" height="48" width="48"
+                            alt="double right icon">
+                    </a>
                 </div>
-
             </div>
 
             <!-- HERO IMAGE  -->
