--- a/pages/about.html
+++ b/pages/about.html
@@ -202,16 +202,16 @@
 
             </div>
 
+            <!-- HERO SUBTITLE -->
             <div class=" grid-subtitle">
                 <p>Accessible, Immersive & Engaging <br>
-                    <span>responsive web design</span>
-                </p>
-
+                    <span>responsive web design</span></p>
                 <div class="cta">
-                    <a href="#main" id="hero-cta" class="btn btn-primary">about me<i
-                            class="fa-solid fa-angles-right"></i></a>
+                    <a href="#main" id="hero-cta" class="btn btn-primary">About Me
+                        <img class="icon" src="../icons/solid/icons8-double-right-48-light.png" height="48" width="48"
+                            alt="double right icon">
+                    </a>
                 </div>
-
             </div>
 
             <!-- HERO IMAGE  -->
