skills page meta tag

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -12,14 +12,14 @@
     <meta name="image" property="og:image" content="https://shakexsempe.netlify.app/img/shakex-sempe-logo.png">
 
     <!-- TITLE -->
-    <title>Shakex Sempe || Web Development Skills Page</title>
+    <title>Skills: Web Design & Development</title>
     <!--  -->
     <!-- META DESCRIPTION -->
     <meta name="description"
-        content="South Africa based Website Developer. I create Homepages, Landing pages and basic websites for businesses & professionals to showcase their services, projects and products.">
+        content="Front-End developer focused on Responsive Web Design, Fluid design, Web accessibility and Search Engine Optimization">
     <!-- META KEYWORDS -->
     <meta name="keywords"
-        content="responsive web design, user interface, UI, user experience, UX, homepage, landing page, website design, website development, seo, freelance,  web hosting, domain registration, ">
+        content="responsive web design, user interface, UI, user experience, html, css, javascript, accessibility, website design, website development, seo, freelance,  web hosting, domain registration, ">
     <!-- META AUTHOR -->
     <meta name="author" content="Boitumelo Shakex Sempe">
     <!-- FAVICON -->
