--- a/pages/skills.html
+++ b/pages/skills.html
@@ -117,7 +117,7 @@
 
                 <a href="../pages/work.html" title="Projects page" data-link data-after="Projects"
                   class="scroll-link scroll-li">
-                  <img class="icon" src="../icons/outline/icons8-link-48-light.png" height="48" width="48" alt="link icon">
+                  <img class="icon" src="../icons/outline/icons8-right-button-48-light.png" height="48" width="48" alt="right-button icon">
                   projects
                 </a>
 
